kubernetes/policies/kyverno/require-cosign-signature.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-cosign-signature
spec:
  validationFailureAction: Enforce
  background: false
  webhookTimeoutSeconds: 30
  rules:
    - name: verify-platform-api-signature
      match:
        any:
          - resources:
              kinds:
                - Pod
      verifyImages:
        - imageReferences:
            - "133857166442.dkr.ecr.us-east-1.amazonaws.com/platform-api:*"
          attestors:
            - entries:
                - keyless:
                    issuer: "https://token.actions.githubusercontent.com"
                    subject: "https://github.com/jztlee/secure-platform-identity/.github/workflows/ci.yaml@refs/heads/main"
                    rekor:
                      url: https://rekor.sigstore.dev
